[package]
name = "rig"
version = "0.1.0"
edition = "2021"
authors = ["icon [drew@parker.systems]"]
description = "simple dns tool for a more modern age"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/callrbx/rig-dns-tool"

[lib]
name = "librig"
path = "src/librig.rs"

[[bin]]
name = "rig"
path = "src/rig.rs"

[dependencies]
bitfield = "*"
bincode = "*"
serde = {version = "*", features = ["derive"]}
rand = "*"
